# ESP-IDF-Setup-Guide

./: LICENSE  README.md
esp32DevTemplate/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32DevTemplate/main/: CMakeLists.txt  app_config.h  main.c
esp32DevTemplate/main/bluetooth/nimBLE_GATT_Server/include/: common.h  nimBLE_gatt_server_setup.h
esp32DevTemplate/main/bluetooth/nimBLE_GATT_Server/src/: gatt_svc.c  led.c  nimBLE_gatt_server_setup.c
esp32DevTemplate/main/hello_world/: hello_world.c  hello_world.h
esp32DevTemplate/main/wifi/station/include/: station_example_main.h
esp32DevTemplate/main/wifi/station/src/: station_example_main.c
